[gd_scene load_steps=2 format=3 uid="uid://dtfa8e6fahfdy"]

[ext_resource type="Script" path="res://autoloads/VersionManifest.gd" id="1_o8kth"]

[node name="VersionManifest" type="Node"]
script = ExtResource("1_o8kth")

[node name="GetHTTPRequest" type="HTTPRequest" parent="."]

[node name="DownloadVersionFileHTTPRequest" type="HTTPRequest" parent="."]
accept_gzip = false

[connection signal="request_completed" from="GetHTTPRequest" to="." method="_on_get_http_request_request_completed"]
